OO-5865: sort by last name, first name project managers